--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["kaznak <kaznak.at.work@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+cryptostore = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
