--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["kaznak <kaznak.at.work@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 cryptostore = "^0.3.1"
+redis = "^3.5.3"
+aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
