--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["kaznak <kaznak.at.work@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-cryptostore = "^0.3.1"
+cryptostore = {git = "https://github.com/bmoscon/cryptostore.git"}
 redis = "^3.5.3"
 aioredis = "^1.3.1"
+cryptofeed = {git = "https://github.com/bmoscon/cryptofeed.git"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
